# resin

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: formatter-linter-tests.yml  linter.yml  linux.yml  pull-request-tagger.yml  windows.yml
cmake/: inject_defs_into_schema.cmake  json_schemas.hpp.in  test_consts.hpp.in
cmake/dependencies/: CMakeLists.txt
docs/dev/: WorkingWithTheRepository.md
libresin/: CMakeLists.txt
libresin/assets/: marching_cubes.comp
libresin/libresin/: exceptions.hpp
libresin/libresin/assets/: marching_cubes.comp
libresin/libresin/core/: camera.cpp  camera.hpp  component_id_registry.hpp  framebuffer.hpp  framebufffer.cpp  id_registry.hpp  light.hpp  material.cpp  material.hpp  mesh_exporter.cpp  mesh_exporter.hpp  raycaster.cpp  raycaster.hpp  scene.cpp  scene.hpp  sdf_shader_consts.hpp  shader.cpp  shader.hpp  shader_storage_buffer.cpp  shader_storage_buffer.hpp  transform.cpp  transform.hpp  uniform_buffer.cpp  uniform_buffer.hpp
libresin/libresin/core/resources/: resource_manager.hpp  shader_resource.cpp  shader_resource.hpp  shader_resource_managers.hpp
libresin/libresin/core/sdf/: group_node.cpp  group_node.hpp  primitive_node.hpp  sdf_tree_node.hpp
libresin/libresin/core/sdf_tree/: group_node.cpp  group_node.hpp  primitive_base_node.cpp  primitive_base_node.hpp  primitive_node.cpp  primitive_node.hpp  sdf_tree.cpp  sdf_tree.hpp  sdf_tree_node.cpp  sdf_tree_node.hpp  sdf_tree_node_visitor.hpp  sdf_tree_registry.hpp
libresin/libresin/helpers/: logger_helpers.hpp
libresin/libresin/utils/: enum_mapper.hpp  exceptions.hpp  json.cpp  json.hpp  logger.cpp  logger.hpp  macros.hpp  path.cpp  path.hpp  path_utf.cpp  path_utf.hpp  string_hash.hpp  string_views.hpp
libresin/tests/: files_helper.hpp  glm_helper.hpp  random_helper.hpp
libresin/tests/core/: camera_test.cpp  glm_helper.hpp  transform_test.cpp
libresin/tests/core/resources/: shader_resource_test.cpp
libresin/tests/core/sdf_tree/: sdf_tree_test.cpp
libresin/tests/data/core/resources/deps_cycle/: main.vert  shader_a.glsl  shader_b.glsl  shader_c.glsl
libresin/tests/data/core/resources/regular_load/: expected_glsl.frag  expected_raw.frag  main.frag  shader_a.glsl  shader_b.glsl  shader_c.glsl
libresin/tests/utils/: json_tests.cpp
patches/: imgui.patch  imguizmo.patch  valijson.patch
resin/: CMakeLists.txt
resin/assets/: blinn_phong.glsl  grid.frag  main.frag  marching_cubes.comp  material_view.frag  pbr.glsl  phong.glsl  sdf.glsl  test.comp  test.frag  test.vert
resin/resin/: main.cpp  resin.cpp  resin.hpp
resin/resin/camera/: first_person_camera_operator.cpp  first_person_camera_operator.hpp  orbiting_camera_operator.cpp  orbiting_camera_operator.hpp
resin/resin/components/: sdf_tree.cpp  sdf_tree.hpp
resin/resin/core/: graphics_context.cpp  graphics_context.hpp  key_codes.hpp  mouse_codes.hpp  window.cpp  window.hpp
resin/resin/dialog/: file_dialog.cpp  file_dialog.hpp
resin/resin/event/: event.hpp  key_events.hpp  mouse_events.hpp  scroll_events.hpp  window_events.hpp
resin/resin/imgui/: components.cpp  components.hpp  dnd_payloads.hpp  gizmo.cpp  gizmo.hpp  main_menu_bar.cpp  main_menu_bar.hpp  material.cpp  material.hpp  material_edit.cpp  material_edit.hpp  materials_list.cpp  materials_list.hpp  modals.cpp  modals.hpp  node_edit.cpp  node_edit.hpp  sdf_tree.cpp  sdf_tree.hpp  transform_edit.cpp  transform_edit.hpp  transform_gizmo.cpp  transform_gizmo.hpp  types.hpp  viewport.cpp  viewport.hpp
resin/resin/resources/: resource_managers.hpp
schemas/: definitions.schema.json  prefab.schema.json  resin.schema.json
